tests/baselines/reference/parserErrorRecovery_ArgumentList3.errors.txt
parserErrorRecovery_ArgumentList3.ts(2,4): error TS2304: Cannot find name 'bar'.
parserErrorRecovery_ArgumentList3.ts(2,8): error TS2304: Cannot find name 'a'.
parserErrorRecovery_ArgumentList3.ts(3,4): error TS1135: Argument expression expected.


==== parserErrorRecovery_ArgumentList3.ts (3 errors) ====
    function foo() {
       bar(a,
       ~~~
!!! error TS2304: Cannot find name 'bar'.
           ~
!!! error TS2304: Cannot find name 'a'.
       return;
       ~~~~~~
!!! error TS1135: Argument expression expected.
    }